# tars

./: .gitignore  CMakeLists.txt  README.md  STM32F429XX_FLASH.ld  openocd.cfg
App/: shell.c  shell.h  tars_api.c  tars_api.h  tars_app.h  tars_builtin_apps.c  tars_builtin_apps.h  tars_crc.c  tars_crc.h  tars_features.h  tars_flash_hw.c  tars_flash_hw.h  tars_fw_identity.h  tars_hal.c  tars_hal.h  tars_lfs.c  tars_lfs.h  tars_loader.c  tars_loader.h  tars_lua.c  tars_lua.h  tars_manifest.c  tars_manifest.h  tars_motor.c  tars_motor.h  tars_ota.c  tars_ota.h  tars_platform.h  tars_registry.c  tars_storage.c  tars_storage.h  tars_sys.c  tars_sys.h  tars_vfs.c  tars_vfs.h  usb_otg.c  usb_otg.h
App/apps/: app_motor_ctl.c  app_viewport.c
App/foc/: tars_foc.c  tars_foc.h
App/lcd/: ili9341.c  lcd_fb.c  lcd_fb.h  lcd_io.c  lcd_io.h  lcd_log.c  lcd_log.h  lcd_stubs.c  lcd_text.c  lcd_text.h  lcd_viewport.c  lcd_viewport.h
App/mcu/: tars_mcu.h  tars_mcu_gpio.c  tars_mcu_pinmap.c  tars_mcu_pinmap.h  tars_mcu_pwm.c  tars_mcu_shell.c
App/probe/: tars_probe.c  tars_probe.h  tars_probe_capture.c  tars_probe_capture.h  tars_probe_metrics.c  tars_probe_metrics.h  tars_probe_uart.c  tars_probe_uart.h
App/resource/: tars_res_gpio.c  tars_res_gpio.h  tars_res_mgr.c  tars_res_mgr.h  tars_res_profile.c  tars_res_profile.h  tars_res_pwm.c  tars_res_pwm.h  tars_resource.c  tars_resource.h
Core/Inc/: FreeRTOSConfig.h  adc.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  dma2d.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
USB_DEVICE/App/: usb_device.c  usb_device.h
USB_HOST/App/: usb_host.c  usb_host.h
Utilities/Fonts/: fonts.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: app-format.md  flash-layout.md  mcu-shell.md  ota.md  probe.md  res-profile.md  scheduling.md
pcb/current-sense/: current-sense.kicad_pcb  current-sense.kicad_prl  current-sense.kicad_pro  current-sense.kicad_sch  sym-lib-table  ~current-sense.kicad_pcb.lck  ~current-sense.kicad_pro.lck
pcb/gerbers/current-sense-gerbers/: current-sense-B_Cu.gbl  current-sense-B_Mask.gbs  current-sense-F_Cu.gtl  current-sense-F_Mask.gts  current-sense-In1_Cu.g1  current-sense-In2_Cu.g2  current-sense-NPTH.drl  current-sense-PTH.drl
tools/: flash.sh  fw-identity-gen.py  openocd-flash-partition.tcl  res-profile.py  tars-app-fixed.ld  tars-app-pic.ld  tars-pack.py  tars-send.py  usb-shell.py
tools/examples/: blink.lua  coop.lua  hello.lua  readcfg.lua
tools/foc/: foc-sync.py
tools/pinmap/: README.md  pinmap-gen.py  stm32f429i-disc1.csv
tools/probe/: metrics.csv  probe-client.py  probe-gen.py
tools/sdk/: tars_app_sdk.h
